# governance-devils-advocate

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
src/: server.py
src/data/: ethical_frameworks.json  eu_ai_act_tiers.json  mitre_atlas.json  nist_ai_rmf.json
src/tools/: __init__.py  ethics.py  eu_ai_act.py  memo.py  mitre_atlas.py  nist_rmf.py
tests/: test_tools.py
