[project]
name = "governance-devils-advocate"
version = "0.1.0"
description = "Remote MCP server exposing AI-governance frameworks (NIST AI RMF, MITRE ATLAS, EU AI Act) and ethical-reasoning scaffolds to any MCP client."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Adam Barrett" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-governance",
    "nist-ai-rmf",
    "mitre-atlas",
    "eu-ai-act",
    "fastmcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/ab75173/governance-devils-advocate"
Repository = "https://github.com/ab75173/governance-devils-advocate"
Issues = "https://github.com/ab75173/governance-devils-advocate/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
